# OrganicallySourcedPBR

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
install/linux/: desktop.in
res/: LICENSE  create_ico.sh  res.qrc
src/: mainwindow.cpp  mainwindow.h
